MICS-14309 Fix collapsed single menu hover style
The text was not visible with the same color as the background

--- a/app/react/src/styles/common/navigatormenu.less
+++ b/app/react/src/styles/common/navigatormenu.less
@@ -12,6 +12,16 @@
   }
 }
 
+.ant-menu-inline-collapsed-tooltip {
+  .ant-tooltip-inner,
+  .ant-tooltip-arrow-content {
+    background: #ffffff;
+  }
+  .mcs-sideBar-menuItem_simple {
+    color: @text-color;
+  }
+}
+
 #mcs-main-layout {
   .ant-layout-sider {
     box-shadow: none;
